2007-08-10  Torsten Rahn  <rahn@kde.org>

	Another patch by Tim Sutton of QGis fame.
	Improves Mac integration, introduces 
	unit tests and fixes some indentation.

        *  install_mac/1-release-extra.sh
        *  install_mac/2-release-qt.sh
        *  src/lib/vectorcomposer.cpp
        *  src/lib/maptheme.cpp
        *  src/lib/TextureTile.cpp
        *  src/lib/GeoPolygon.cpp
        *  src/lib/MarbleDirs.h
        *  src/lib/CMakeLists.txt
        *  src/CMakeLists.txt
        *  tests/GeoPolygonTest.cpp
        *  tests/MarbleWidgetTest.cpp
        *  tests/CMakeLists.txt
        *  CMakeLists.txt

2007-08-10  Torsten Rahn  <rahn@kde.org>

	Renaming TileScissor class and files to 
	TileCreator.

	* src/lib/tilescissor.cpp
	* src/lib/TileCreator.cpp
	* src/lib/MarbleModel.cpp
	* src/lib/CMakeLists.txt
	* src/lib/tilescissor.h
	* src/lib/TileCreator.h
	* src/lib/katlastilecreatordialog.cpp
	* src/DESIGN
	* src/tilecreator/main.cpp
	* src/lib/tilescissor.cpp

2007-08-10  Torsten Rahn  <rahn@kde.org>

	* src/lib/tilescissor.cpp:

	Fixing another issue reported by Luis Silva:

	"The image sizes must really be the correct ones 
	otherwise the tiling process just puts the same 
	image on both hemispheres." 

	Cleaning up the TileScissor class a lot while 
	fixing that issue: Renamed variables to be
	more suggestive and made code more elegant.

2007-08-10  Inge Wallin  <inge@lysator.liu.se>

	Simplify: break out some common code into private methods.
	* src/lib/placemarkpainter.cpp (roomForLabel): new method
	(labelFontData): new method
	(sphericalPaintPlaceFolder): use new methods
	(rectangularPaintPlaceFolder): use new methods

2007-08-10  Torsten Rahn  <rahn@kde.org>
	Fixing issue reported by Luis Silva by making sure 
	that the preview images match the expected size:

	" Also the 'map view' tab gets garbled with previews of 
	sizes other than 136x136. The previews go on top of each other."

2007-08-10  Inge Wallin  <inge@lysator.liu.se>
